Add correct message and wrong message, add timeup function to clear interval, add label to radio button, line 54 and line 119 still has issue, it may be related to index calculation, also may need to use .html instead of .append to replace content

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id="time-left"></div>
     <form class="questions">
         <p id="question">Question1</p>
+        <div class="options"></div>
         <!--Below needs to be written in the html from js-->
         <input type="radio" name="question" value="answer1"> answer1
         <input type="radio" name="question" value="answer2"> answer2
