fixed the index issue in next function, added result part

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <button id="start" class="btn">Start The Game!</button>
     <button id="next" class="btn">Next Question!</button>
     <button id="restart" class="btn">Start Over?</button>
+    <h2 id="results">Result<h2>
+            <p id="correct"></p>
+            <p id="incorrect"></p>
+            <p id="unanswered"></p>
 
 
 </body>
